2011-05-19 John Wu <John dot Wu at ACM dot org>
	* src/utilidor.cpp: add function sortAll_quick to allow sortAll to
	call nosharing on the input arrays, add calls to nosharing to
	sortKeys and sortMerge to make sure the arrays being sorted are
	not shared with anything else (as the suggestion of Alexandre
	Maurel)

2011-05-14 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp: add a note in the documentation for
	ibis::util::readString about the baskslash (Robert Wong from
	openx.org was inquiring about the backslash)

2011-05-13 John Wu <John dot Wu at ACM dot org>
	* configure.ac, Makefile.am: add rules to output fastbit-config
	for dynamically exporting the dependencies of FastBit
	* tests/Makefile.am: regenerate the test cases 16, 17, 18 and 19
	for check-ibis (they were somehow lost)

2011-05-12 John Wu <John dot Wu at ACM dot org>
	* src/*.h: add FASTBIT_CXX_DLLSPEC to classes and global variables
	at the request of Alexandre Maurel
	* src/colValues.cpp: add code for handling ibis::selectClause::CNT
	to function reduce
	* src/bundle.h, src/bundle.cpp: add member variable aggr to
	ibis::bundle1 and ibis::bundles to record the aggregator
	corresponding to each column to address the problem with ordering
	of select clauses raised by Jon Strabala
	* src/selectClause.h: rename NIL of AGREGADO to NIL_AGGR to make
	it more explicit
	* tests/Makefile.am: add test case 16, 17, 18, and 19 to
	check-ibis to check for the placement of various terms in the
	select clause

2011-05-11 John Wu <John dot Wu at ACM dot org>
	* src/utilidor.cpp: remove calls to nosharing from sortAll and
	sortKeys.  These functions use shallow copying extensively to make
	sure they are working on the same data.
	* src/Makefile.am: remove -i option from sed command because -i is
	not standardized (this problem was first noticed by Jon Strabala)
	* src/part.cpp: add a conditional include statement for ieeefp.h
	when the macro sun is defined (at the request of Jon Strabala)
