@@ -1,0 +1,2 @@
+105, 1.00001, 4
+105, 1.0001, 2
