@@ -1,0 +1,6 @@
+0.25, 6, 2
+0.5, 6, 2
+1, 1, 1
+4, 3, 3
+8, 9, 3
+16, 15, 3
